--- a/sass/elements/game/_blacksmith.scss
+++ b/sass/elements/game/_blacksmith.scss
@@ -10,6 +10,7 @@
         height: 100%;
         padding: 10px;
         z-index: 2;
+        position: relative;
         &:first-child {
             border-right: 6px solid $color-gray_dark;
         }
