--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -11,6 +11,13 @@
     width: 80vw;
     height: 100%;
 }
+.game__errorWrapper{
+    position: absolute;
+    z-index: 12;
+    width: 100%;
+    height: 50px;
+    background-color: $color-red;
+}
 .game__section{
     background-color: rgba(255, 255, 255, 0.3);
     background-size: 100% 100%;
