--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -412,7 +412,8 @@
     }
 
     &__goldSubstract {
-        z-index: 4;
+        position: relative;
+        z-index: 11;
         text-align: center;
         font-weight: 900;
         letter-spacing: 0.063rem;
