--- a/sass/elements/game/_general.scss
+++ b/sass/elements/game/_general.scss
@@ -14,9 +14,22 @@
 .game__errorWrapper{
     position: absolute;
     z-index: 12;
-    width: 100%;
-    height: 50px;
-    background-color: $color-red;
+
+    left: 2%;
+    width: 96%;
+    transform: translateY(-140%);    
+    padding: 0.375rem 0;
+    text-align: center;
+    background-color: $color-error;
+    animation: 1s an__game_errorWrapper_show ease-in-out forwards,
+     0.5s 3s  an__game_errorWrapper_show2 ease-in-out forwards
+    ;
+    
+    
+    text-transform: uppercase;
+    color: $color-white;
+    letter-spacing: 0.125rem;
+    font-size: 2.375rem;
 }
 .game__section{
     background-color: rgba(255, 255, 255, 0.3);
@@ -36,3 +49,18 @@
         left: 0;
     }
 }
+@keyframes an__game_errorWrapper_show{
+    100%{
+        transform: translateY(0%);  
+    }
+}
+@keyframes an__game_errorWrapper_show2{
+    0%{
+        transform: translateY(10%);  
+    }
+    100%{
+        transform: translateY(-140%);    
+    }
+}
+
+
