--- a/sass/elements/game/_guard.scss
+++ b/sass/elements/game/_guard.scss
@@ -1,16 +1,30 @@
 .guard {
-    height: 100%;
-    background-image: url("/images/background_guard.jpg");
-    background-size: 100% 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    &__wrapper {
+        height: 100%;
+    }
+    &-menu {
+        height: 100%;
+        background-image: url("/images/background_guard.jpg");
+        background-size: 100% 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+    }
+    &-city {
+        height: 100%;
+        background-image: url("/images/background_guard_city.jpg");
+        background-size: 100% 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
     &__item {
         display: flex;
         width: 50%;
         padding: 10px;
-     
+
         z-index: 1;
         background: rgba(255, 255, 255, 0.5);
         border-radius: 20px;
@@ -18,7 +32,7 @@
         position: relative;
         backdrop-filter: blur(2px);
         transition: 0.3s;
-        &:hover{
+        &:hover {
             backdrop-filter: blur(4px);
         }
     }
@@ -49,28 +63,28 @@
         word-spacing: 0.125rem;
         line-height: 1.25rem;
     }
-    &__award{
+    &__award {
         display: flex;
         align-items: center;
         margin-top: 41px;
     }
 
-    &__awardIcon{
+    &__awardIcon {
         width: 2.313rem;
         height: auto;
         object-fit: cover;
     }
-    &__awardAmount{
-      margin-left: 0.625rem;
-      
-      font-size: 1.625rem;
-      font-weight: 700;
-      word-spacing: 0.375rem;
-      text-transform: uppercase;
-      letter-spacing: 0.125rem;
-      strong{
-          text-shadow: 0.128rem 0.128rem $color-red;
-      }
+    &__awardAmount {
+        margin-left: 0.625rem;
+
+        font-size: 1.625rem;
+        font-weight: 700;
+        word-spacing: 0.375rem;
+        text-transform: uppercase;
+        letter-spacing: 0.125rem;
+        strong {
+            text-shadow: 0.128rem 0.128rem $color-red;
+        }
     }
     &__inputValue {
         position: absolute;
@@ -81,11 +95,11 @@
             right: -30px;
         }
     }
-    &__acceptBtnWrapper{
+    &__acceptBtnWrapper {
         display: flex;
         justify-content: flex-end;
     }
-    &__acceptBtn{
+    &__acceptBtn {
         font-size: 1.375rem;
         border: none;
         outline: none;
@@ -102,6 +116,122 @@
             letter-spacing: 0.065rem;
         }
     }
+    &__summaryWrapper {
+        width: 100%;
+        height: 90%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: center;
+    }
+    &__summary{
+        padding: 15px;
+        background: rgba(255, 255, 255, 0.6);
+        backdrop-filter: blur(4px);
+        border-radius: 25px;
+    
+
+    }
+    &__summaryIcon{
+        height: 190px;
+        width: auto;
+        object-fit: cover;
+    }
+    &__summaryTitle{
+    
+        font-size: 1.5rem;
+        font-weight: 700;
+        letter-spacing: 0.125rem;
+        text-transform: uppercase;
+        text-align: center;
+        color: $color-white;
+        text-shadow: 0.125rem 0.125rem $color-gold;
+    }
+    &__summaryPayout{
+        display: block;
+        text-align: center;
+        font-size: 2.063rem;
+        margin-top: 0.25rem;
+        font-weight: 700;
+        letter-spacing: 0.125rem;
+        color: $color-gold;
+        text-shadow: 0.125rem 0.125rem $color-blue;
+    }
+    &__summaryBtn{
+        display: block;
+        margin: 0.5rem auto;
+        font-size: 1.375rem;
+        border: none;
+        outline: none;
+        position: relative;
+        font-weight: 900;
+        background: $color-blue;
+        color: $color-white;
+        padding: 0.313rem 0.75rem;
+        border-radius: 0.625rem;
+        margin-top: 0.625rem;
+        transition: 0.2s;
+        letter-spacing: 0.068rem;
+        transition: 0.2s;
+        &:hover{
+            letter-spacing: 0.188rem;
+            cursor: pointer;
+        }
+    }
+    &__guardCountdownWrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 80%;
+        height: 60px;
+        border-radius: 40px;
+        margin: 4px auto;
+        border: 8px solid $color-gold;
+        background: rgba(255, 255, 255, 0.3);
+        backdrop-filter: blur(2px);
+        position: relative;
+        overflow: hidden;
+    }
+    &__guardCountdownBar{
+      position: absolute;
+      height: 100%;
+      width: 10%;
+      left: 0;
+      background: $color-green;
+     animation: 15s an_guardCountdownBar infinite ease-in-out;
+     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+     background-size: 400% 400%;
+    }
+    &__guardCountdownTime{
+        font-weight: 900;
+       word-spacing: 0.125rem;
+        color: $color-white;
+       font-size: 3rem;
+    }
+    &__guardCancelBtn{
+        display: block;
+        margin: 10px auto;
+        width: auto;
+        background: $color-white;
+        font-size: 1.188rem;
+        border: none;
+        outline: none;
+        transition: 0.2s;
+        padding: 0.313rem 1.188rem;
+        font-weight: 700;
+        border-radius: 8px;
+        letter-spacing: 0.063rem;
+        &:hover{
+            cursor: pointer;
+            background: $color-error;
+            color: $color-white;
+            letter-spacing: 0.125rem;
+            border-radius: 3px;
+        }
+
+    }
+}
+.guard-menu {
     .range {
         margin-top: 8px;
         height: 80px;
@@ -168,29 +298,27 @@
             left: 0%;
             line-height: 2.5rem;
             font-weight: bold;
-            &::after{
-                content: '';
+            &::after {
+                content: "";
                 position: absolute;
                 z-index: -1;
-               
+
                 transform: rotate(45deg);
                 top: 0;
                 display: block;
                 text-align: center;
                 width: 45px;
                 height: 45px;
-                
+
                 background: #f5f2ec;
                 border-top-left-radius: 50%;
                 border-top-right-radius: 50%;
                 border-bottom-left-radius: 50%;
                 border: 3px solid #53433f;
-
             }
         }
     }
 }
-
 // classes responsible for progress bar
 @for $i from 1 through 10 {
     .field__progressBar-#{$i} {
@@ -198,4 +326,15 @@
             width: ($i * 10%) - 3% !important;
         }
     }
+}
+@keyframes an_guardCountdownBar{
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
