logic - pets - extend the rent time

--- a/sass/elements/game/_pets.scss
+++ b/sass/elements/game/_pets.scss
@@ -181,6 +181,11 @@
             background: $color-gold;
             color: $color-gray-dark;
             font-weight: 700;
+            transition: 0.2s;
+            &:hover{
+                cursor: pointer;
+                letter-spacing: 0.125rem;
+            }
         }
     }
 
