--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -2,6 +2,7 @@
     background-image: url("/images/background_profile.jpg");
     display: flex;
     &__item {
+        position: relative;
         padding: 10px;
         width: 50%;
         z-index: 1;
