--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -59,7 +59,46 @@
         background-size: 120% 100%;
         grid-column: 2/4;
         grid-row: 1/3;
+        position: relative;
+ 
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
+    &__portraitImg{
+        margin-top: 37px;
+        width: 60%;
+        height: auto;
+        object-fit: cover;
+    }
+    &__portraitActionBar{
+        position: absolute;
+    
+        display: flex;
+        bottom: 2px;
+        height: 29px;
+    }
+    &__portraitBtn{
+        height: 29px;
+        width: 29px;
+        background: $color-blue;
+        &:hover{
+            cursor: pointer;
+        }
+        &-left{
+            clip-path: polygon(50% 50%, 100% 0, 100% 100%);
+        }
+        &-right{
+            clip-path: polygon(50% 50%, 0 0, 0 100%);
+        }
+    }
+    &__portraitActionIcon{
+        width: 27px;
+        height: auto;
+        object-fit: cover;
+        margin: 0 9px;
+    }
+    &
     &__info {
         position: relative;
         grid-column: 2/4;
