--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -98,7 +98,7 @@
         object-fit: cover;
         margin: 0 9px;
     }
-    &
+    
     &__info {
         position: relative;
         grid-column: 2/4;
@@ -258,12 +258,33 @@
         letter-spacing: 0.063rem;
     }
     &__level {
+        z-index: -1;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 90%;
         margin: 10px auto;
         height: 47px;
-        border: 4px solid $color-black;
+        border: 4px solid $color-gray_dark;
         border-radius: 6px;
         background: rgba(255, 255, 255, 0.4);
+        color: $color-white;
+        font-size: 51px;
+        font-weight: bold;
+        -webkit-text-stroke: 2px $color-gray_dark;
+        text-shadow: 3px 3px $color-gray_dark;
+        font-style: italic;
+    }
+    &__levelProgress{
+        z-index: -1;
+        position: absolute;
+        left: 0;
+        height: 100%;
+        background: $color-green;
+        &-1{
+            width: 90%;
+        }
     }
     &__nickname {
         width: 89%;
