--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -60,45 +60,45 @@
         grid-column: 2/4;
         grid-row: 1/3;
         position: relative;
- 
+
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    &__portraitImg{
+    &__portraitImg {
         margin-top: 37px;
         width: 60%;
         height: auto;
         object-fit: cover;
     }
-    &__portraitActionBar{
+    &__portraitActionBar {
         position: absolute;
-    
+
         display: flex;
         bottom: 2px;
         height: 29px;
     }
-    &__portraitBtn{
+    &__portraitBtn {
         height: 29px;
         width: 29px;
         background: $color-blue;
-        &:hover{
+        &:hover {
             cursor: pointer;
         }
-        &-left{
+        &-left {
             clip-path: polygon(50% 50%, 100% 0, 100% 100%);
         }
-        &-right{
+        &-right {
             clip-path: polygon(50% 50%, 0 0, 0 100%);
         }
     }
-    &__portraitActionIcon{
+    &__portraitActionIcon {
         width: 27px;
         height: auto;
         object-fit: cover;
         margin: 0 9px;
     }
-    
+
     &__info {
         position: relative;
         grid-column: 2/4;
@@ -110,7 +110,7 @@
         width: 325px;
         background-color: $color-gray_dark;
         position: absolute;
-
+    
         &-common {
             border: 4px solid $color-blue;
         }
@@ -191,6 +191,15 @@
         table {
             color: $color-white;
         }
+    }
+    &__potionElement {
+        color: $color-white;
+    }
+    &__potion-common {
+        border-top: 2px solid $color-blue;
+    }
+    &__potion-legendary {
+        border-top: 2px solid $color-gold;
     }
     &__actionWrapper {
         height: 30px;
@@ -276,13 +285,13 @@
         text-shadow: 3px 3px $color-gray_dark;
         font-style: italic;
     }
-    &__levelProgress{
+    &__levelProgress {
         z-index: -1;
         position: absolute;
         left: 0;
         height: 100%;
         background: $color-green;
-        &-1{
+        &-1 {
             width: 90%;
         }
     }
@@ -514,12 +523,12 @@
     box-sizing: border-box;
     margin-top: 10px;
     border-radius: 10px;
-    height: 30%;
+    // height: 30%;
     width: 100%;
     color: $color-gold;
     font-size: 1.563rem;
     padding: 25px 0;
-    padding-left: 5px;
+
     border: 3px solid $color-gold;
     box-shadow: 0 0 3px $color-black;
 
@@ -527,8 +536,8 @@
     backdrop-filter: blur(3px);
 
     table {
-        width: 93%;
-        height: 100%;
+        width: 100%;
+        //height: 100%;
         margin-top: -10px;
     }
     tbody {
@@ -537,11 +546,20 @@
         border-color: inherit;
     }
     td {
-        padding: 0;
+        padding-top: 5px;
     }
     tr {
         max-height: 30px;
         margin-left: 0.5rem;
+        &:nth-child(2n) {
+            border-bottom: 2px solid $color-gray_dark;
+            margin-bottom: 4px;
+            padding-bottom: 10px;
+            td {
+                padding-top: 0;
+                padding-bottom: 5px;
+            }
+        }
     }
     img {
         width: 20px;
@@ -550,6 +568,9 @@
         margin-left: 0.5rem;
         margin-right: 0.5rem;
     }
+}
+.profile__generalLabelWrapper {
+    position: relative;
 }
 #blacksmith_backpack_item_label,
 #blacksmith_equipment__item_label {
@@ -577,6 +598,9 @@
     display: flex;
     align-items: center;
 }
+.profile__item-notAfford {
+    animation: 1s an__profile__item-notAfford forwards;
+}
 
 .profile__item--amount {
     font-weight: 600;
@@ -596,7 +620,9 @@
         border-radius: 8px;
     }
 }
-
+.white {
+    color: $color-white !important;
+}
 .profile__itemSpecs {
     &-backpackSlot1 {
         transform: translate(-1px, -100%);
@@ -785,7 +811,37 @@
         }
     }
 }
-
+.potion__label{
+        padding: 10px;
+        border-radius: 18px;
+        width: 280px;
+        background-color: $color-gray_dark;
+        position: absolute;
+        &-1{
+            transform: translate(258px, -100%);
+        }
+        &-2{
+            transform: translate(454px, -100%);
+        }
+        &::after {
+            width: 30px;
+            height: 30px;
+            content: "";
+            bottom: -30px;
+            position: absolute;
+            display: block;
+            background: $color-gray_dark;
+            right: 28px;
+            bottom: -26px;
+            clip-path: polygon(50% 100%, 0 0, 100% 0);
+        }
+}
+@keyframes an__profile__item-notAfford {
+    100% {
+        color: $color-error;
+        font-weight: 900;
+    }
+}
 @keyframes an__equipmentIcon {
     0% {
         transform: scale(40%);
