--- a/sass/elements/game/_wizard.scss
+++ b/sass/elements/game/_wizard.scss
@@ -4,23 +4,191 @@
     background-image: url('/images/background_wizard.jpg');
     background-size: 100% 100%;
     position: relative;
-    
-    &__item{
-        width: 50%;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+
+    &__characterWrapper{
+        grid-column: 1/1;
+        grid-row: 1/1;
+        padding-left: 20px;
+    }
+    &__characterImg{
+        width: 96%;
+        height: auto;
+        object-fit: cover;
+    }
+    &__descriptionWrapper{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        grid-column: 1/1;
+        grid-row: 2/2;
+        padding: 20px;
+        max-height: 336px;
+    }
+    &__description{
+        width: 100%;
         height: 100%;
         padding: 10px;
-        z-index: 2;
-        &:first-child {
-            border-right: 6px solid $color-gray_dark;
+        background: rgba(255, 255, 255, 0.5);
+        border-radius: 20px;
+        position: relative;
+        backdrop-filter: blur(2px);
+        transition: 0.3s;
+
+        &:hover {
+            backdrop-filter: blur(4px);
         }
     }
-
-    &__shopWrapper{
-       display: flex;
-       flex-direction: column;
-       justify-content: flex-end;
+    &__title{
+        font-size: 37px;
+        letter-spacing: 0.25rem;
+        word-spacing: 0.188rem;
+        font-weight: 900;
+        text-transform: uppercase;
+        color: #e85df5;
+        -webkit-text-stroke: 1px $color-black;
     }
-    &__frame{
-        background-image: url('/images/wizard_item_frame.png');
+    &__text{
+        font-size: 1.25rem;
+        word-spacing: 0.125rem;
+        line-height: 1.25rem;
+    }
+    &__btn{
+        font-size: 1.375rem;
+        border: none;
+        outline: none;
+        position: absolute;
+        bottom: 10px;
+        right: 10px;
+        font-weight: 900;
+        background: #79decf;
+        color: $color-white;
+        padding: 0.313rem 0.75rem;
+        border-radius: 0.625rem;
+        margin-top: 0.625rem;
+        transition: 0.2s;
+         transition: 0.2s;
+        &:hover {
+            cursor: pointer;
+            letter-spacing: 0.065rem;
+        }
+    }
+}
+.spinningWheel{
+  &__wrapper{
+    grid-column: 2/-1;
+    grid-row: 1/-1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__content{
+    width:500px;
+	height:500px;
+	background-color: #ccc;
+	border-radius:50%;
+	border:15px solid #dde;
+	position: relative;
+	overflow: hidden;
+	transition: 5s;
+    box-sizing: border-box;
+
+    
+  }
+
+
+  
+}
+
+
+// #ffd26a - gold
+// #405c5d - dark gray
+// #4a6b71 - light gray
+.spinningWheel__content {
+width:700px;
+	height:700px;
+	background-color: #ccc;
+	border-radius:50%;
+	border:15px solid #ffd26a;
+	position: relative;
+	overflow: hidden;
+	transition: 5s;
+    box-sizing: border-box;
+
+    div{
+
+	height:50%;
+	width:280px;
+	position: absolute;
+	clip-path: polygon(100% 0 , 50% 100% , 0 0 );
+	transform:translateX(-50%);
+	transform-origin:bottom;
+	text-align:center;
+	display:flex;
+	align-items: center;
+	justify-content: center;
+	font-size:20px;
+	background: rgb(230,243,255);
+    background: linear-gradient(229deg, rgba(230,243,255,1) 37%, rgba(185,212,240,1) 53%);
+	left:195px;
+    }
+    span{
+        display: block;
+        position: absolute;
+        top: 50%;
+        height: 50%;
+        width:280px;
+        height: 20px;
+        border: 3px solid red;
+    }
+    .circle{
+        clip-path: none;
+        position: absolute;
+        top: calc(50% - 40px);
+        left: 50%;
+        height: 80px;
+        width: 80px;
+        border-radius: 50%;
+        background: red;
+        z-index: 2;
+        &-animation{
+          //  animation:  2s an__spinning_wheel_circle infinite;
+        }
+    }
+    
+    .one{
+        left:50%;
+    }
+    .two{
+        transform: rotate(45deg);
+    }
+    .three{
+        transform:rotate(90deg);
+    }
+
+    .four{
+        transform: rotate(135deg);
+    }
+    .five{
+        transform: rotate(180deg);
+    }
+    .six{
+        transform: rotate(225deg);
+    }
+    .seven{
+        transform: rotate(270deg);
+    }
+    .eight{
+
+        transform: rotate(315deg);
+    }
+}
+@keyframes an__spinning_wheel_circle {
+    100%{
+        width: 100%;
+        height: 100%;
+        top: 0;
     }
 }
